# niem-code-list-examples-for-spec

./: .gitignore  Makefile.in  configure  configure.ac  import.mk  import.mk.in
1/: HazmatTitle49Code.csv  HazmatTitle49Code.gc  Makefile  csv-to-gc.xsl  csv-to-simple-type.xsl  instance-cl.xml  instance-no-cl.xml  ns1-enum.xsd  ns1-generic.xsd  ns1.xsd  xml-catalog-enum.xml  xml-catalog-generic-gc.xml  xml-catalog-generic.xml  xml-catalog.xml
2/: HazmatTitle49Code.gc  Makefile
example-extension-schema/: Makefile  extension.xsd  xml-catalog.xml
example-extension-schema/gc/: vma-vmo.gc  vmo.gc
example-extension-schema/sample-instance/: instance1.xml
example-run-time/: Makefile  extension.xsd  xml-catalog.xml
example-run-time/gc/: vma.gc
example-run-time/niem-subset/: wantlist.xml
example-run-time/niem-subset/niem/niem-core/3.0/: niem-core.xsd
example-run-time/sample-instance/: instance1.xml
from-spec/: code-lists-schema-appinfo.xsd  xml-catalog-appinfo.xml  xml-catalog.xml
make-model-spreadsheet/: .gitignore  Makefile  csv-to-csv  make-model.csv  make-model.csv.in-sqlite  make-model.xlsx  manual.csv  to-sqlite-input-csv  to-vma-vmo.sq3  to-vma.sq3  to-vmo.sq3  vma-vmo.gch  vma.gch  vmo.gch
niem-subset/: wantlist.xml
niem-subset/niem/proxy/xsd/3.0/: xs.xsd
schema-xml/: xml.xsd
schema-xsd/: xml-catalog-strict.xml  xml-catalog.xml
simple/: Makefile  code-lists-instance.xsd  extension-run-time.xsd  extension-schema-time.xsd  instance-run-time.xml  instance-schema-time.xml  make-model.csv  make-model.csv.txt  make-model.doc-table.xml  make-model.gc  make-model.gch.xml  make-model.table.xml  make-model.xlsx  table-to-doc-table.xsl  to-vma.sq3  vma.csv  xml-catalog-appinfo.xml  xml-catalog-run-time.xml  xml-catalog-schema-time.xml
simple/niem-subset/: xml-catalog.xml
